--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -3,6 +3,10 @@
     "message": "Sponsored by",
     "description": "Text appears above the sponsor banner image. So it kind of reads 'Sponsored by BBC' (for example)."
   },
+  "banner#long-connecting": {
+    "message": "<strong>Oh no!</strong> You seem to be having trouble connecting!<br>\nDownload the latest version of Psiphon from the <a class=\"about-info-url\" href=\"#\">download site</a>\nor by sending an email to <a class=\"about-email\" href=\"#\"></a>",
+    "description": "Message that appears when Psiphon is having trouble connecting. Often such connection problems can be fixed by downloading a new version."
+  },
   "nav#connection": {
     "message": "Connection",
     "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button"
