--- a/src/webui/_locales/locale-names.json
+++ b/src/webui/_locales/locale-names.json
@@ -12,13 +12,15 @@
   "fa": "فارسی",
   "fi": "Suomi",
   "fr": "Français",
+  "hr": "Hrvatski",
   "hu": "Magyar",
   "it": "Italiano",
+  "ko": "한국어",
   "nl": "Nederlands",
-  "nb": "Norsk (bokmål)",
+  "nb": "Norsk bokmål",
   "pl": "Polski",
-  "pt_BR": "Português(Br)",
-  "pt_PT": "Português(Pt)",
+  "pt_BR": "Português (Brasil)",
+  "pt_PT": "Português (Portugal)",
   "ru": "Русский",
   "sv": "Svenska",
   "zh": "中文",
