--- a/src/webui/_locales/ar/messages.json
+++ b/src/webui/_locales/ar/messages.json
@@ -35,8 +35,12 @@
         "message": "Psiphon is connected",
         "description": "Message in the big connection status box telling the user that Psiphon is currently connected to the network."
     },
+    "messages#placeholder": {
+        "message": "لا وجود لرسائل إلى حد الآن",
+        "description": "Placeholder text shown when there are not yet any log messages to show. This message is removed when the first log message is added."
+    },
     "nav#settings": {
-        "message": "Settings",
+        "message": "إعدادات",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
     "settings#egress-region#error-modal-title": {
@@ -64,7 +68,7 @@
         "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
     },
     "about#visit-download-site": {
-        "message": "To <strong>download a new version</strong> of Psiphon, or to <strong>get help and more information</strong>, please <a href=\"#\" id=\"about-info-url\">visit the website</a>.",
+        "message": "To <strong>download a new version</strong> of Psiphon, or to <strong>get help and more information</strong>, please <a href=\"#\" class=\"InfoURL\">visit the website</a>.",
         "description": "Paragraph on the 'About' page telling users what web page to go to get a new version of Psiphon or more info about it."
     },
     "settings#upstream-proxy#skip-label": {
@@ -76,7 +80,7 @@
         "description": "Label for the text box where the user can set the network port number for the 'upstream proxy' that they would like to use."
     },
     "settings#port-value-error-msg": {
-        "message": "Must be between 1 and 65535.",
+        "message": "يجب أن تكون بين 1 و 65535.",
         "description": "Error text that appears when the user enters an invalid network port number. As indicated, a valid port number must be a number between 1 and 65535, inclusive. This text is not visible until an invalid value is entered."
     },
     "nav#feedback": {
@@ -86,6 +90,10 @@
     "connection#starting-msg": {
         "message": "Psiphon is connecting...",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to connect to the network."
+    },
+    "settings#applying-message": {
+        "message": "إعادة الإتصال لتثبيت الإعدادات",
+        "description": "Pop-up message shown to users after they have changed their settings and a reconnection is happening to apply the new settings."
     },
     "settings#egress-region#select-us": {
         "message": "الولايات المتحدة الأمريكية",
@@ -111,6 +119,10 @@
         "message": "You can also find solutions to many common problems in our <a class=\"FaqURL\" href=\"#\">Frequently Asked Questions</a>.",
         "description": "Text telling the user how to get to the Psiphon FAQ."
     },
+    "settings#saved-message": {
+        "message": "وقع تسجيل الإعدادات",
+        "description": "Pop-up message shown to users after they have changed their settings (but they aren't currently connected, so there's no reconnect or further action)."
+    },
     "about#get-by-email": {
         "message": "<strong>If the website is inaccessible</strong>, you can get a new version of Psiphon by sending an email to:",
         "description": "Paragraph on the 'About' page telling users that they can also get a new version of Psiphon via email. The text in this resource is then followed by an email address."
@@ -132,7 +144,7 @@
         "description": "Label for the text box where the user will enter their desired local port for the Psiphon HTTP/HTTPS process. The full term for this would be 'Desired HTTP and HTTPS local proxy port', but is shortened."
     },
     "settings#reset-button": {
-        "message": "Reset to Default",
+        "message": "إعادة الضبط إلى الافتراضي",
         "description": "Text on the button that resets the Psiphon settings values to default. This will typically be pressed if the user has configured something incorrectly and needs to get back to the default state."
     },
     "about#head": {
@@ -188,12 +200,16 @@
         "description": "Title of the message box showing the error message when it is detected that the user has chosen a local proxy port (either HTTP or SOCKS) that is already in use and therefore can't be used by Psiphon."
     },
     "connection#disconnect-btn": {
-        "message": "Disconnect",
+        "message": "قطع الإتصال",
         "description": "Text on the big connection button telling the user that if they click it, they will be disconnected from the network. This is shown when the user is currently connected."
     },
     "feedback#top_content_title": {
         "message": "وافينا بردك",
         "description": "Title for the Feedback page"
+    },
+    "banner#long-connecting": {
+        "message": "<strong>Oh no!</strong> You seem to be having trouble connecting!<br>\nDownload the latest version of Psiphon from the <a class=\"NewVersionURL\" href=\"#\">download site</a>\nor by sending an email to <a class=\"NewVersionEmail\" href=\"#\"></a>",
+        "description": "Message that appears when Psiphon is having trouble connecting. Often such connection problems can be fixed by downloading a new version."
     },
     "connection#stopped-msg": {
         "message": "Psiphon is disconnected",
@@ -267,16 +283,12 @@
         "message": "Don't proxy websites within your country",
         "description": "The label on the checkbox that enables 'Split Tunnel'."
     },
-    "about#visit-company-site": {
-        "message": "To find out more about Psiphon Inc. please visit our <a href=\"https://psiphon.ca\">company website</a>.",
-        "description": "Paragraph on the 'About' page telling users how get info about Psiphon the company (versus Psiphon the application). We have a separate company site."
-    },
     "feedback#text_feedback_email_prompt": {
-        "message": "If you would like us to respond to you, please enter your email address:",
+        "message": "إن كنتم تنتظرون إجابة منا، الرجاء وضع بريدكم الإلكتروني:",
         "description": "Label for a text field where the user can provide an email address to Psiphon Inc. along with their feedback."
     },
     "feedback#text_feedback_prompt": {
-        "message": "Please enter your comments here:",
+        "message": "الرجاء وضع تعليقاتكم هنا:",
         "description": "Label for a text box where the user can provide a feedback message to Psiphon Inc."
     },
     "feedback#smiley_happy": {
@@ -284,7 +296,7 @@
         "description": "The text below the 'happy face' feedback choice."
     },
     "connection#wait-btn": {
-        "message": "Please wait...",
+        "message": "الرجاء الإنتظار...",
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
     },
     "settings#transport-mode#help-text": {
@@ -292,11 +304,11 @@
         "description": "Help text for the 'Use VPN Mode' transport selection checkbox. It gives some technical details and indicates that this mode is not recommended."
     },
     "settings#egress-region#select-best-performance": {
-        "message": "Best Performance",
+        "message": "أفضل أداء",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. This is the default option and indicates that Psiphon will use a server in the best/fastest region."
     },
     "connection#connect-btn": {
-        "message": "Connect",
+        "message": "الدخول",
         "description": "Text on the big connection button telling the user that if they click it, Psiphon will start trying to connect to the network. This is shown to the user while Psiphon is disconnected."
     }
 }
