--- a/src/webui/_locales/fi/messages.json
+++ b/src/webui/_locales/fi/messages.json
@@ -24,7 +24,7 @@
         "description": "This alert is shown to the user if they enter incorrect values into one or more of the settings fields."
     },
     "messages#show-debug-label": {
-        "message": "Show debug messages",
+        "message": "Näytä vianjäljitysviestit",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
     },
     "banner#sponsored-by": {
@@ -32,11 +32,15 @@
         "description": "Text appears above the sponsor banner image. So it kind of reads 'Sponsored by BBC' (for example)."
     },
     "connection#connected-msg": {
-        "message": "Psiphon is connected",
+        "message": "Psiphon on yhdistetty",
         "description": "Message in the big connection status box telling the user that Psiphon is currently connected to the network."
     },
+    "messages#placeholder": {
+        "message": "Ei vielä viestejä",
+        "description": "Placeholder text shown when there are not yet any log messages to show. This message is removed when the first log message is added."
+    },
     "nav#settings": {
-        "message": "Settings",
+        "message": "Asetukset",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
     "settings#egress-region#error-modal-title": {
@@ -48,7 +52,7 @@
         "description": "Title of the message box showing the error message when a problem is detected with the user's 'upstream proxy settings'."
     },
     "connection#stopping-msg": {
-        "message": "Psiphon is disconnecting...",
+        "message": "Psiphon-yhteys katkaistaan...",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
     },
     "settings#upstream-proxy#error-modal-body-default": {
@@ -56,7 +60,7 @@
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has not directly altered these settings (yet), but the default is causing a problem."
     },
     "feedback#success-message": {
-        "message": "<strong>Thank you!</strong> Your feedback has been sent.",
+        "message": "<strong>Kiitos!</strong> Palautteesi on lähetetty.",
         "description": "Message shown to user after their feedback has been sent successufully"
     },
     "settings#split-tunnel#help-text": {
@@ -64,7 +68,7 @@
         "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
     },
     "about#visit-download-site": {
-        "message": "To <strong>download a new version</strong> of Psiphon, or to <strong>get help and more information</strong>, please <a href=\"#\" id=\"about-info-url\">visit the website</a>.",
+        "message": "To <strong>download a new version</strong> of Psiphon, or to <strong>get help and more information</strong>, please <a href=\"#\" class=\"InfoURL\">visit the website</a>.",
         "description": "Paragraph on the 'About' page telling users what web page to go to get a new version of Psiphon or more info about it."
     },
     "settings#upstream-proxy#skip-label": {
@@ -76,7 +80,7 @@
         "description": "Label for the text box where the user can set the network port number for the 'upstream proxy' that they would like to use."
     },
     "settings#port-value-error-msg": {
-        "message": "Must be between 1 and 65535.",
+        "message": "On oltava välillä 1 ... 65535.",
         "description": "Error text that appears when the user enters an invalid network port number. As indicated, a valid port number must be a number between 1 and 65535, inclusive. This text is not visible until an invalid value is entered."
     },
     "nav#feedback": {
@@ -84,8 +88,12 @@
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Feeback' view. In that view the user can send feedback about their experience to Psiphon."
     },
     "connection#starting-msg": {
-        "message": "Psiphon is connecting...",
+        "message": "Psiphon yhdistää...",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to connect to the network."
+    },
+    "settings#applying-message": {
+        "message": "Reconnecting to apply your settings.",
+        "description": "Pop-up message shown to users after they have changed their settings and a reconnection is happening to apply the new settings."
     },
     "settings#egress-region#select-us": {
         "message": "Yhdysvallat",
@@ -111,6 +119,10 @@
         "message": "You can also find solutions to many common problems in our <a class=\"FaqURL\" href=\"#\">Frequently Asked Questions</a>.",
         "description": "Text telling the user how to get to the Psiphon FAQ."
     },
+    "settings#saved-message": {
+        "message": "Asetukset tallennettu.",
+        "description": "Pop-up message shown to users after they have changed their settings (but they aren't currently connected, so there's no reconnect or further action)."
+    },
     "about#get-by-email": {
         "message": "<strong>If the website is inaccessible</strong>, you can get a new version of Psiphon by sending an email to:",
         "description": "Paragraph on the 'About' page telling users that they can also get a new version of Psiphon via email. The text in this resource is then followed by an email address."
@@ -132,7 +144,7 @@
         "description": "Label for the text box where the user will enter their desired local port for the Psiphon HTTP/HTTPS process. The full term for this would be 'Desired HTTP and HTTPS local proxy port', but is shortened."
     },
     "settings#reset-button": {
-        "message": "Reset to Default",
+        "message": "Nollaa oletusarvoihin",
         "description": "Text on the button that resets the Psiphon settings values to default. This will typically be pressed if the user has configured something incorrectly and needs to get back to the default state."
     },
     "about#head": {
@@ -148,7 +160,7 @@
         "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the setting does and what the default (and best) option is."
     },
     "settings#vpn-incompatible-msg": {
-        "message": "(Doesn't work with VPN mode.)",
+        "message": "(Ei toimi VPN-tilassa.)",
         "description": "If 'VPN mode' is enabled, this text is displayed under or beside settings which are incompatible with VPN mode and have been disabled because of it. It is intended to let the user know why the setting has been disabled."
     },
     "settings#local-proxy-ports#unique-error-msg": {
@@ -168,7 +180,7 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
     },
     "nav#connection": {
-        "message": "Connection",
+        "message": "Yhteys",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button"
     },
     "connection#stop-btn": {
@@ -188,15 +200,19 @@
         "description": "Title of the message box showing the error message when it is detected that the user has chosen a local proxy port (either HTTP or SOCKS) that is already in use and therefore can't be used by Psiphon."
     },
     "connection#disconnect-btn": {
-        "message": "Disconnect",
+        "message": "Katkaise yhteys",
         "description": "Text on the big connection button telling the user that if they click it, they will be disconnected from the network. This is shown when the user is currently connected."
     },
     "feedback#top_content_title": {
         "message": "Anna meille palautettasi",
         "description": "Title for the Feedback page"
     },
+    "banner#long-connecting": {
+        "message": "<strong>Oh no!</strong> You seem to be having trouble connecting!<br>\nDownload the latest version of Psiphon from the <a class=\"NewVersionURL\" href=\"#\">download site</a>\nor by sending an email to <a class=\"NewVersionEmail\" href=\"#\"></a>",
+        "description": "Message that appears when Psiphon is having trouble connecting. Often such connection problems can be fixed by downloading a new version."
+    },
     "connection#stopped-msg": {
-        "message": "Psiphon is disconnected",
+        "message": "Psiphon-yhteys on katkaistu",
         "description": "Message in the big connection status box telling the user that Psiphon is currently not connected to the network."
     },
     "nav#about": {
@@ -204,11 +220,11 @@
         "description": "Text on the tab that, if the user clicks on it, switches to the 'About' view. In that view the user can see info about the app, info about Psiphon Inc., and click links for more information."
     },
     "settings#local-proxy-ports#leave-blank": {
-        "message": "Leave blank for automatic port selection (recommended).",
+        "message": "Jätä tyhjäksi automaattista porttivalintaa varten (suositeltu).",
         "description": "Help text that appears above the 'Local Proxy Ports' settings. It indicates what the default/best option is (blank, automatic)."
     },
     "language#success-message": {
-        "message": "<strong>Hello!</strong> Welcome to Psiphon.",
+        "message": "<strong>Hei!</strong> Tervetuloa Psiphon-sovellukseen.",
         "description": "A welcome message shown to the user when they first switch to the correct UI language"
     },
     "settings#egress-region#select-sg": {
@@ -220,7 +236,7 @@
         "description": "Checkbox text. If it is checked, diagnostic information about Psiphon's status will be sent along with the feedback to Psiphon Inc."
     },
     "settings#transport-mode#heading": {
-        "message": "Transport Mode",
+        "message": "Siirtotila",
         "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
     },
     "about#description": {
@@ -236,11 +252,11 @@
         "description": "Error message that is visible when the 'Psiphon Server Region' setting is invalid or not yet set."
     },
     "settings#transport-mode#check-label": {
-        "message": "Use VPN Mode",
+        "message": "Käytä VPN-tilaa",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended."
     },
     "nav#messages": {
-        "message": "Log Messages",
+        "message": "Lokiviestit",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Log Messages' view. In that view the user can see the status messages that Psiphon produces as it connects, disconnects, etc."
     },
     "settings#egress-region#select-gb": {
@@ -248,11 +264,11 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the UK will be used."
     },
     "settings#upstream-proxy#hostname-label": {
-        "message": "Hostname",
+        "message": "Verkkotietokone",
         "description": "Label for the text box where the user can set the hostname for the 'upstream proxy'. 'Hostname' means approximately the same thing as 'server network name or identifier'."
     },
     "feedback#smiley_sad": {
-        "message": "Psiphon usein epäonnisttuu yhdistämään tai ei suoriudu kyllin hyvin.",
+        "message": "Psiphon usein epäonnistuu yhdistämään tai ei suoriudu kyllin hyvin.",
         "description": "The text below the 'sad face' feedback choice."
     },
     "settings#egress-region#heading": {
@@ -267,24 +283,20 @@
         "message": "Don't proxy websites within your country",
         "description": "The label on the checkbox that enables 'Split Tunnel'."
     },
-    "about#visit-company-site": {
-        "message": "To find out more about Psiphon Inc. please visit our <a href=\"https://psiphon.ca\">company website</a>.",
-        "description": "Paragraph on the 'About' page telling users how get info about Psiphon the company (versus Psiphon the application). We have a separate company site."
-    },
     "feedback#text_feedback_email_prompt": {
-        "message": "If you would like us to respond to you, please enter your email address:",
+        "message": "Jos haluat meidän vastaavan, kirjoita sähköpostiosoitteesi:",
         "description": "Label for a text field where the user can provide an email address to Psiphon Inc. along with their feedback."
     },
     "feedback#text_feedback_prompt": {
-        "message": "Please enter your comments here:",
+        "message": "Kirjoita kommenttisi tähän:",
         "description": "Label for a text box where the user can provide a feedback message to Psiphon Inc."
     },
     "feedback#smiley_happy": {
-        "message": "Psiphon yhdistää ja suorittaa sillä kuin haluan.",
+        "message": "Psiphon yhdistää ja suorittaa siten kuin haluan.",
         "description": "The text below the 'happy face' feedback choice."
     },
     "connection#wait-btn": {
-        "message": "Please wait...",
+        "message": "Odota...",
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
     },
     "settings#transport-mode#help-text": {
@@ -292,11 +304,11 @@
         "description": "Help text for the 'Use VPN Mode' transport selection checkbox. It gives some technical details and indicates that this mode is not recommended."
     },
     "settings#egress-region#select-best-performance": {
-        "message": "Best Performance",
+        "message": "Paras suorituskyky",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. This is the default option and indicates that Psiphon will use a server in the best/fastest region."
     },
     "connection#connect-btn": {
-        "message": "Connect",
+        "message": "Yhdistä",
         "description": "Text on the big connection button telling the user that if they click it, Psiphon will start trying to connect to the network. This is shown to the user while Psiphon is disconnected."
     }
 }
